--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {
-    "syncpack": "^4.3.1"
-  },
   "devDependencies": {
+    "syncpack": "^4.3.1",
     "prettier": "^1.16.4"
   }
 }
