--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,4 +18,4 @@ jobs:
       - run: docker buildx build \
           --cache-from=type=gha \
           --cache-to=type=gha,mode=max \
-          --load
+          --load .
