--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,8 +17,9 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - run: docker buildx build \
-          --cache-from=type=gha \
-          --cache-to=type=gha,mode=max \
-          --tag test \
-          .
+      - run: |
+          docker buildx build \
+            --cache-from=type=gha \
+            --cache-to=type=gha,mode=max \
+            --tag test \
+            .
