--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: |
+          docker buildx create --use
           docker buildx build \
             --cache-from=type=gha \
             --cache-to=type=gha,mode=max \
