--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,8 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Expose GitHub Runtime
-        uses: crazy-max/ghaction-github-runtime@v1
+      # - name: Expose GitHub Runtime
+      #   uses: crazy-max/ghaction-github-runtime@v1
 
       - name: Env
         run: |
