--- a/.github/workflows/deno.yaml
+++ b/.github/workflows/deno.yaml
@@ -5,6 +5,12 @@ on:
   - pull_request
 
 jobs:
+  setup-deno:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.x
   deno:
     runs-on: ubuntu-latest
     steps:
