--- a/.github/workflows/deno.yaml
+++ b/.github/workflows/deno.yaml
@@ -1,13 +1,16 @@
 name: Deno
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   setup-deno:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
