--- a/.github/workflows/deno.yaml
+++ b/.github/workflows/deno.yaml
@@ -7,63 +7,22 @@ on:
   pull_request:
 
 jobs:
-  setup-deno:
+  worker:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [37, 42]
     steps:
       - uses: actions/checkout@v3
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
 
-      - run: deno run main.ts
+      - run: deno run main.ts ${{ matrix.version }}
 
-      - run: deno test
-
-  deno:
-    if: false
+  gather:
+    name: Gather worker outputs
+    needs: worker
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: cache deno installation and deno.land dependencies
-        uses: actions/cache@v3
-        with:
-          key: ${{ runner.os }}-deno-${{ hashFiles('**/*') }}
-          restore-keys: ${{ runner.os }}-deno-
-          path: |
-            /home/runner/.deno
-            /home/runner/.cache/deno/deps/https/deno.land
-      - name: install or update deno installation
-        run: |
-          export DENO_INSTALL="/home/runner/.deno"
-          export PATH="${DENO_INSTALL}/bin:${PATH}"
-          mkdir -p "${DENO_INSTALL}"
-          deno upgrade || (
-            curl -fsSL https://deno.land/x/install/install.sh > "${DENO_INSTALL}/.sh";
-            sh "${DENO_INSTALL}/.sh"
-          )
-          echo "DENO_INSTALL=${DENO_INSTALL}" >> $GITHUB_ENV
-          echo "PATH=${PATH}" >> $GITHUB_ENV
-      - name: fetch any uncached dependencies
-        run: |
-          deno cache --reload=file: ./mod.ts
-      - run: |
-          deno info ./mod.ts
-      - run: |
-          deno test --allow-none
-      - name: check lint
-        continue-on-error: true
-        run: |
-          deno --unstable lint
-      - name: check formatting
-        continue-on-error: true
-        run: |
-          deno fmt --check
-      - name: check lock file
-        continue-on-error: true
-        run: |
-          if [[ -f lock.json ]]; then
-            deno cache --lock=lock.json --cached-only ./mod.ts
-          fi
-          deno cache --lock-write --lock=lock.json ./mod.ts
-          cat lock.json
+      - run: echo ok
