--- a/.github/workflows/deno.yaml
+++ b/.github/workflows/deno.yaml
@@ -12,17 +12,21 @@ jobs:
     strategy:
       matrix:
         version: [37, 42]
+    outputs:
+      output: ${{ steps.output.outputs.output }}
     steps:
       - uses: actions/checkout@v3
+
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
 
-      - run: deno run main.ts ${{ matrix.version }}
+      - id: output
+        run: deno run main.ts ${{ matrix.version }} >> $GITHUB_OUTPUT
 
   gather:
     name: Gather worker outputs
     needs: worker
     runs-on: ubuntu-latest
     steps:
-      - run: echo ok
+      - run: echo ok ${{ needs.worker.outputs.output }}
