github-token input

--- a/.github/workflows/github-bun-script-workflow.yaml
+++ b/.github/workflows/github-bun-script-workflow.yaml
@@ -9,5 +9,6 @@ jobs:
     steps:
       - uses: homburg/github-bun-script@main
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             console.log("Hello!");
