--- a/.github/workflows/github-bun-script-workflow.yaml
+++ b/.github/workflows/github-bun-script-workflow.yaml
@@ -10,4 +10,10 @@ jobs:
       - uses: homburg/github-bun-script@main
         with:
           script: |
-            console.log("Hello!");
+            import { $ } from "bun";
+
+            const { stdout, stderr, exitCode } = await $`echo "Hello World!"`.quiet();
+
+            console.log(stdout); // Buffer(6) [ 72, 101, 108, 108, 111, 32 ]
+            console.log(stderr); // Buffer(0) []
+            console.log(exitCode); // 0
