--- a/.github/workflows/github-bun-script-workflow.yaml
+++ b/.github/workflows/github-bun-script-workflow.yaml
@@ -19,5 +19,5 @@ jobs:
 
             core.summary
               .addHeading("github-bun-script")
-              .addTable(Object.entries(res).map(([key, val]) => [key, val.toString()])
+              .addTable(Object.entries(res).map(([key, val]) => [key, val.toString()]))
               .write();
