Comment out failing commands

--- a/.github/workflows/github-bun-script-workflow.yaml
+++ b/.github/workflows/github-bun-script-workflow.yaml
@@ -21,9 +21,10 @@ jobs:
             }
 
             commandOutput(await $`echo "Hello World!"`.quiet());
+
             // commandOutput(await $`ls -la`.quiet());
 
-            commandOutput(await $`apt-get install tree`.quiet());
+            // commandOutput(await $`apt-get install tree`.quiet());
 
             core.summary.write();
 
