--- a/.github/workflows/pr-block-by-label.yaml
+++ b/.github/workflows/pr-block-by-label.yaml
@@ -17,4 +17,4 @@ jobs:
       - uses: docker://agilepathway/pull-request-label-checker:latest
         with:
           one_of: block-pr
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.PAT }}
